<resources>
    <string name="app_name">Hour1App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="some_value">Values</string>
</resources>
